--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,9 @@ input[type=radio]:checked + label {
   background-color: hsl(172, 67%, 45%);
   color: hsl(183, 100%, 15%);
 }
+input[type=radio]:checked + label.custom-tip {
+  padding: 0;
+}
 input[type=radio]:focus + label, input[type=radio]:focus-within + label {
   outline: auto 2px Highlight;
   outline: auto 5px -webkit-focus-ring-color;
